--- a/views/board.html
+++ b/views/board.html
@@ -32,8 +32,9 @@
             crossorigin="anonymous"></script>
     <script>
       $(function() {
-        var currentBoard = window.location.pathname.slice(3,-1);
+        var currentBoard = window.location.pathname.slice(window.location.pathname.lastIndexOf('/')+1);
         var url = "/api/threads/"+currentBoard;
+        console.log(url);
         $('#boardTitle').text('Welcome to '+window.location.pathname)
         $.ajax({
           type: "GET",
@@ -50,23 +51,25 @@
               var thread = ['<div class="thread">'];
               thread.push('<div class="main">')
               thread.push('<p class="id">id: '+ele._id+' ('+ele.created_on+')</p>');
-              thread.push('<form id="reportThread"><input type="hidden" name="report_id" value="'+ele._id+'"><input type="submit" value="Report"></form>');
-              thread.push('<form id="deleteThread"><input type="hidden" value="'+ele._id+'" name="thread_id" required=""><input type="text" placeholder="password" name="delete_password" required=""><input type="submit" value="Delete"></form>');
+              thread.push('<form id="reportThread-' + ele._id.slice(0, 5) + '"><input type="hidden" name="report_id" value="'+ele._id+'"><input type="submit" value="Report"></form>');
+              thread.push('<form id="deleteThread-' + ele._id.slice(0, 5) + '"><input type="hidden" value="'+ele._id+'" name="thread_id" required=""><input type="text" placeholder="password" name="delete_password" required=""><input type="submit" value="Delete"></form>');
               thread.push('<h3>'+ele.text+'</h3>');
               thread.push('</div><div class="replies">');
               var hiddenCount = ele.replycount - 3;
               if (hiddenCount < 1) { hiddenCount = 0 };
               thread.push('<h5>'+ele.replycount+' replies total ('+hiddenCount+' hidden)- <a href="'+window.location.pathname+ele._id+'">See the full thread here</a>.</h5>');
-              ele.replies.forEach(function(rep) {
-                thread.push('<div class="reply">')
-                thread.push('<p class="id">id: '+rep._id+' ('+rep.created_on+')</p>');
-                thread.push('<form id="reportReply"><input type="hidden" name="thread_id" value="'+ele._id+'"><input type="hidden" name="reply_id" value="'+rep._id+'"><input type="submit" value="Report"></form>');
-                thread.push('<form id="deleteReply"><input type="hidden" value="'+ele._id+'" name="thread_id" required=""><input type="hidden" value="'+rep._id+'" name="reply_id" required=""><input type="text" placeholder="password" name="delete_password" required=""><input type="submit" value="Delete"></form>');
-                thread.push('<p>'+rep.text+'</p>');
-                thread.push('</div>')
-              });
+              if (ele.replies) {
+                ele.replies.forEach(function(rep) {
+                  thread.push('<div class="reply">')
+                  thread.push('<p class="id">id: '+rep._id+' ('+rep.created_on+')</p>');
+                  thread.push('<form id="reportReply-' + ele._id.slice(0, 5) + '"><input type="hidden" name="thread_id" value="'+ele._id+'"><input type="hidden" name="reply_id" value="'+rep._id+'"><input type="submit" value="Report"></form>');
+                  thread.push('<form id="deleteReply-' + ele._id.slice(0, 5) + '"><input type="hidden" value="'+ele._id+'" name="thread_id" required=""><input type="hidden" value="'+rep._id+'" name="reply_id" required=""><input type="text" placeholder="password" name="delete_password" required=""><input type="submit" value="Delete"></form>');
+                  thread.push('<p>'+rep.text+'</p>');
+                  thread.push('</div>')
+                });
+              }
               thread.push('<div class="newReply">')
-              thread.push('<form action="/api/replies/'+currentBoard+'/" method="post" id="newReply">');
+              thread.push('<form action="/api/replies/'+currentBoard+'/" method="post" id="newReply-' + ele._id.slice(0, 5) + '">');
               thread.push('<input type="hidden" name="thread_id" value="'+ele._id+'">');
               thread.push('<textarea rows="5" cols="80" type="text" placeholder="Quick reply..." name="text" required=""></textarea><br>');
               thread.push('<input type="text" placeholder="password to delete" name="delete_password" required=""><input style="margin-left: 5px" type="submit" value="Submit">')
