--- a/views/board.html
+++ b/views/board.html
@@ -46,6 +46,7 @@
             // THIS ARRAY SET UP IS FOR CODE READABILITIES AND TESTING!
             // THIS IS NOT WHAT IT WOULD LOOK LIKE TO GO LIVE
             //
+            console.log(data)
             data.forEach(function(ele) {
               console.log(ele);//can I use typeScript please?!
               var thread = ['<div class="thread">'];
